--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ utils/__pycache__
 venv
 .DS_Store
 .aider*
-.aidevs-agent-cracker
+aidevs-agent-cracker/
 .cursorrules
 lessons/
 AI_devs_teczka.pdf
+pre/__pycache__
