--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ assignments/pre/__pycache__
 assignments/0_13_4b.txt
 assignments/json.txt
 assignments/przesluchania/
+assignments/przesluchania/transcriptions
