--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 utils/__pycache__
 venv
 .DS_Store
-.aider*
 aidevs-agent-cracker/
 .cursorrules
 lessons/
 AI_devs_teczka.pdf
 assignments/pre/__pycache__
 assignments/0_13_4b.txt
+assignments/cenzura.txt
 assignments/json.txt
 assignments/przesluchania/
-assignments/przesluchania/transcriptions/
+assignments/transkrypcje/
