--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-.env
-utils/__pycache__
-venv
-.DS_Store
 aidevs-agent-cracker/
-.cursorrules
 lessons/
+venv
+.cursorrules
+.env
+.DS_Store
 AI_devs_teczka.pdf
-assignments/pre/__pycache__
-assignments/0_13_4b.txt
-assignments/cenzura.txt
-assignments/json.txt
-assignments/przesluchania/
-assignments/transkrypcje/
-assignments/resources/
+
+assignments/__pycache__
+assignments/S01E03/resources/
+assignments/S01E05/resources/
+assignments/S02E01/resources/
+assignments/S02E02/resources/
+assignments/S02E04/resources/
+assignments/S02E05/resources/
+assignments/S03E01/resources/
