--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ assignments/S02E02/resources/
 assignments/S02E04/resources/
 assignments/S02E05/resources/
 assignments/S03E01/resources/
+assignments/S03E02/resources/
